# quant-trading

./: ._.coverage  ._.dockerignore  ._.flake8  ._.git  ._.github  ._.gitignore  ._.pytest_cache  ._.venv  ._=0.14.0  ._Dockerfile  ._LICENSE  ._PROJECT_STATUS.md  ._README.md  ._app  ._cli.py  ._coverage.xml  ._dist  ._docker-compose.yml  ._docs  ._notebooks  ._pyproject.toml  ._qt  ._requirements-ci.txt  ._requirements.txt  ._setup.cfg  ._tests  ._tools  .coverage  .dockerignore  .flake8  .gitignore  .tmp_remove.txt  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  cli.py  coverage.xml  docker-compose.yml  pyproject.toml  (+3 more)
.github/: ._dependabot.yml  ._workflows  dependabot.yml
.github/workflows/: ._ci.yml  ._publish.yml  ci.yml  publish.yml
api/: README.md  main.py  requirements.txt  summary_metrics.csv  summary_metrics_daily.csv  summary_metrics_weekly.csv
api/platform_data/: metadata.sqlite
app/: ._streamlit_app.py  streamlit_app.py
data_platform/: __init__.py
data_platform/api/: routes.py  service.py
data_platform/providers/: __init__.py  alphavantage.py  base.py  yahoo.py
data_platform/quality/: __init__.py  checks.py
data_platform/schemas/: __init__.py  base.py  fundamentals.py  metadata.py  prices.py
data_platform/sdk/: __init__.py  client.py
data_platform/storage/: __init__.py  metadata_sqlite.py  ts_parquet.py
docs/: ._FINAL_REPORT.html  ._FINAL_REPORT.md  ._REPO_SECRETS.md  ._case_study.md  ._week5_risk.md  FINAL_REPORT.html  FINAL_REPORT.md  FRONTEND_REDESIGN_MASTER_PROMPT.md  OPENBB_MASTER_PLAN.md  REPO_SECRETS.md  case_study.md  week5_risk.md
frontend/: README.md  app.js  design-system.md  index.html  styles.css  tokens.css
frontend-react/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend-react/src/: App.tsx  index.css
notebooks/: ._benchmark_report.json  ._demo.ipynb  ._equity_base_spread0.5_inventory_coeff0.0.csv  ._equity_base_spread0.5_inventory_coeff0.1.csv  ._equity_base_spread1.0_inventory_coeff0.0.csv  ._equity_base_spread1.0_inventory_coeff0.1.csv  ._equity_demo.csv  ._equity_pairs_demo.csv  ._equity_s0.5_i0.0.csv  ._equity_s0.5_i0.0_ef0.0005_sc0.0.csv  ._equity_s0.5_i0.0_ef0.0005_sc0.0001.csv  ._equity_s0.5_i0.0_ef0.0005_sc0.0005.csv  ._equity_s0.5_i0.0_ef0.001_sc0.0.csv  ._equity_s0.5_i0.0_ef0.001_sc0.0001.csv  ._equity_s0.5_i0.0_ef0.001_sc0.0005.csv  ._equity_s0.5_i0.0_ef0.0_sc0.0.csv  ._equity_s0.5_i0.0_ef0.0_sc0.0001.csv  ._equity_s0.5_i0.0_ef0.0_sc0.0005.csv  ._equity_s0.5_i0.1.csv  ._equity_s0.5_i0.1_ef0.0005_sc0.0.csv  ._equity_s0.5_i0.1_ef0.0005_sc0.0001.csv  ._equity_s0.5_i0.1_ef0.0005_sc0.0005.csv  ._equity_s0.5_i0.1_ef0.001_sc0.0.csv  ._equity_s0.5_i0.1_ef0.001_sc0.0001.csv  ._equity_s0.5_i0.1_ef0.001_sc0.0005.csv  ._equity_s0.5_i0.1_ef0.0_sc0.0.csv  ._equity_s0.5_i0.1_ef0.0_sc0.0001.csv  ._equity_s0.5_i0.1_ef0.0_sc0.0005.csv  ._equity_s1.0_i0.0.csv  ._equity_s1.0_i0.0_ef0.0005_sc0.0.csv  ._equity_s1.0_i0.0_ef0.0005_sc0.0001.csv  ._equity_s1.0_i0.0_ef0.0005_sc0.0005.csv  ._equity_s1.0_i0.0_ef0.001_sc0.0.csv  ._equity_s1.0_i0.0_ef0.001_sc0.0001.csv  ._equity_s1.0_i0.0_ef0.001_sc0.0005.csv  ._equity_s1.0_i0.0_ef0.0_sc0.0.csv  ._equity_s1.0_i0.0_ef0.0_sc0.0001.csv  ._equity_s1.0_i0.0_ef0.0_sc0.0005.csv  ._equity_s1.0_i0.1.csv  ._equity_s1.0_i0.1_ef0.0005_sc0.0.csv  (+78 more)
qt/: .___init__.py  .___pycache__  ._analytics  ._cli.py  ._data  ._engine  ._ml  ._risk  ._strategies  ._utils  __init__.py  cli.py
qt/analytics/: ._metrics.py  ._pairs_utils.py  ._reports.py  ._risk.py  ._risk_ext.py  ._statistics.py  metrics.py  pairs_utils.py  reporting.py  reports.py  risk.py  risk_ext.py  statistics.py  walk_forward.py
qt/data/: # Code Citations.md  ._# Code Citations.md  .___init__.py  __init__.py  cache.py  prep.py  yahoo_api.py
qt/engine/: .___pycache__  ._engine.py  ._event.py  ._execution.py  ._order_book.py  engine.py  event.py  execution.py  order_book.py
qt/ml/: .___init__.py  ._pipeline.py  __init__.py  pipeline.py
qt/risk/: ._accounting.py  ._sizing.py  accounting.py  sizing.py
qt/strategies/: ._base.py  ._market_maker.py  ._momentum.py  ._pairs.py  base.py  market_maker.py  momentum.py  pairs.py
qt/utils/: .___pycache__  ._logger.py  ._numba_helpers.py  logger.py  numba_helpers.py  run_artifacts.py
scripts/: ci-local.sh  run_api.sh  serve_frontend.sh
tests/: ._integration  ._perf  ._unit
tests/integration/: ._test_demo_engine.py  ._test_pairs_demo.py  test_demo_engine.py  test_pairs_demo.py
tests/perf/: ._test_timing.py  test_timing.py
tests/unit/: .___pycache__  (+24 more)
tools/: ._benchmark_report.py  ._demo_market_maker.py  ._demo_pairs.py  ._param_sweep.py  ._run_demo.py  ._walk_forward.py  benchmark_report.py  demo_market_maker.py  demo_pairs.py  param_sweep.py  run_demo.py  walk_forward.py
(+421 files in other folders)
