[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.1.0"
authors = [ { name = "Auto", email = "auto@example.com" } ]
description = "Comprehensive event-driven quantitative trading simulator with market making and pairs trading strategies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "statsmodels>=0.14.0",
    "numba>=0.57.0",
    "dataclasses-json>=0.5.7",
    "click>=8.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2",
]
data = [
    "yfinance>=0.2.0",
    "alpha-vantage>=2.3.0",
]

[project.scripts]
qt = "qt.cli:cli"
qt-demo = "qt.cli:cli"

[project.urls]
Homepage = "https://github.com/sosahinolcay-tech/quant-trading"
Repository = "https://github.com/sosahinolcay-tech/quant-trading"
Issues = "https://github.com/sosahinolcay-tech/quant-trading/issues"
Documentation = "https://github.com/sosahinolcay-tech/quant-trading#readme"
