[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.1.0"
authors = [ { name = "Auto", email = "auto@example.com" } ]
description = "Comprehensive event-driven quantitative trading simulator with market making and pairs trading strategies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "statsmodels>=0.14.0",
    "numba>=0.57.0",
    "dataclasses-json>=0.5.7",
    "click>=8.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2",
]
data = [
    "yfinance>=0.2.0",
    "alpha-vantage>=2.3.0",
]

[project.scripts]
qt = "qt.cli:cli"
qt-demo = "qt.cli:cli"

[project.urls]
Homepage = "https://github.com/sosahinolcay-tech/quant-trading"
Repository = "https://github.com/sosahinolcay-tech/quant-trading"
Issues = "https://github.com/sosahinolcay-tech/quant-trading/issues"
Documentation = "https://github.com/sosahinolcay-tech/quant-trading#readme"

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks
  | \.ipynb_checkpoints
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
exclude = [
    'notebooks/',
    'build/',
    'dist/',
    '\.venv/',
    'venv/',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "perf: Performance tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["qt"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
